--- a/report.tex
+++ b/report.tex
@@ -10,9 +10,9 @@
 \author{Riccardo Finotello\emailfoot{riccardo.finotello@to.infn.it}}
 
 \affil{%
-  Dipartimento di Fisica, Università degli Studi di Torino,\protect\\
-  \protect\textsc{I.N.F.N.} -- sezione di Torino and Arnold--Regge Center,\protect\\
-  via Pietro Giuria 1, I-10125 Torino, Italy
+  Dipartimento di Fisica, Università degli Studi di Torino,\protect\authorcr
+  \protect\textsc{I.N.F.N.} -- sezione di Torino and Arnold--Regge Center,\protect\authorcr
+  via P.\ Giuria 1, I-10125 Torino, Italy
 }
 
 
@@ -94,3 +94,5 @@
 
 
 \end{document}
+
+%vim ft=tex
