Adjustment to display
Signed-off-by: Riccardo Finotello <riccardo.finotello@gmail.com>

--- a/sft-trunc_dlump.ipynb
+++ b/sft-trunc_dlump.ipynb
@@ -1115,12 +1115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_short = df.filter(regex='^(?!level).*')\n",
-    "df_short.to_csv('./data/data_sft_dlump_preds_short.csv')"
+    "df_short.to_csv('./data/data_sft_dlump_preds_short.csv', index=False)"
    ]
   },
   {
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {
       "image/png": {
        "width": 480
@@ -1166,6 +1166,163 @@
    "source": [
     "from IPython.display import Image\n",
     "Image('./img/dlumps_pred.png', width=480)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparing the Results\n",
+    "\n",
+    "We finally compare the results with the extrapolations:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "dlumps_exp = pd.read_json('./data/dlumps_exp.json')\n",
+    "df         = pd.read_csv('./data/data_sft_dlump_preds_short.csv')\n",
+    "\n",
+    "# merge the values\n",
+    "df = pd.merge(df, dlumps_exp, left_index=True, right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then select only the low weights:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_low = df.loc[df['weight'] < 1.5]\n",
+    "df_low = df_low.drop(columns=['weight', 'type'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then compute the metrics:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MSE</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>R2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>LR</th>\n",
+       "      <td>0.335605</td>\n",
+       "      <td>0.502808</td>\n",
+       "      <td>0.849034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r-SVR</th>\n",
+       "      <td>0.097146</td>\n",
+       "      <td>0.249551</td>\n",
+       "      <td>0.956301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RF</th>\n",
+       "      <td>0.626431</td>\n",
+       "      <td>0.680042</td>\n",
+       "      <td>0.718212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GBDT</th>\n",
+       "      <td>0.623042</td>\n",
+       "      <td>0.675549</td>\n",
+       "      <td>0.719736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ANN</th>\n",
+       "      <td>0.431317</td>\n",
+       "      <td>0.449995</td>\n",
+       "      <td>0.805980</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            MSE       MAE        R2\n",
+       "LR     0.335605  0.502808  0.849034\n",
+       "r-SVR  0.097146  0.249551  0.956301\n",
+       "RF     0.626431  0.680042  0.718212\n",
+       "GBDT   0.623042  0.675549  0.719736\n",
+       "ANN    0.431317  0.449995  0.805980"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "\n",
+    "pred = df_low.filter(regex='^exp_')\n",
+    "true = df_low['exp']\n",
+    "met  = pd.DataFrame(index=['LR', 'r-SVR', 'RF', 'GBDT', 'ANN'])\n",
+    "\n",
+    "# compute the metrics\n",
+    "met['MSE'] = [mean_squared_error(true.values.reshape(-1,),\n",
+    "                                 pred[feat].values.reshape(-1,)\n",
+    "                                )\n",
+    "              for feat in pred\n",
+    "             ]\n",
+    "met['MAE'] = [mean_absolute_error(true.values.reshape(-1,),\n",
+    "                                  pred[feat].values.reshape(-1,)\n",
+    "                                 )\n",
+    "              for feat in pred\n",
+    "             ]\n",
+    "\n",
+    "met['R2'] = [r2_score(true.values.reshape(-1,),\n",
+    "                      pred[feat].values.reshape(-1,)\n",
+    "                     )\n",
+    "              for feat in pred\n",
+    "             ]\n",
+    "\n",
+    "# print the metrics\n",
+    "met"
    ]
   }
  ],
