--- a/sec/preliminary.tex
+++ b/sec/preliminary.tex
@@ -15,6 +15,8 @@ In the \href{https://github.com/thesfinox/ml-sft-trunc}{GitHub repository} the a
 
   \item the \href{https://github.com/thesfinox/ml-sft-trunc/tree/wzw}{wzw} branch holds the analysis of the \wzw model,
 
+  \item the \href{https://github.com/thesfinox/ml-sft-trunc/tree/aggregate}{aggregate} branch contains the model independent analysis,
+
   \item the \href{https://github.com/thesfinox/ml-sft-trunc/tree/metrics_eval}{metrics\_eval} branch contains a preliminary study on the best metric to use for the analysis,
 
   \item the \href{https://github.com/thesfinox/ml-sft-trunc/tree/report}{report} branch contains this report,
