Update the report with the LSTM network in the lumps dataset
Signed-off-by: Riccardo Finotello <riccardo.finotello@gmail.com>

--- a/report.bib
+++ b/report.bib
@@ -3,8 +3,7 @@
   title = {{{TensorFlow}}: {{Large}}-Scale Machine Learning on Heterogeneous Systems},
   author = {Abadi, Martín and Agarwal, Ashish and Barham, Paul and Brevdo, Eugene and Chen, Zhifeng and Citro, Craig and Corrado, Greg S. and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Goodfellow, Ian and Harp, Andrew and Irving, Geoffrey and Isard, Michael and Jia, Yangqing and Jozefowicz, Rafal and Kaiser, Lukasz and Kudlur, Manjunath and Levenberg, Josh and Mané, Dandelion and Monga, Rajat and Moore, Sherry and Murray, Derek and Olah, Chris and Schuster, Mike and Shlens, Jonathon and Steiner, Benoit and Sutskever, Ilya and Talwar, Kunal and Tucker, Paul and Vanhoucke, Vincent and Vasudevan, Vijay and Viégas, Fernanda and Vinyals, Oriol and Warden, Pete and Wattenberg, Martin and Wicke, Martin and Yu, Yuan and Zheng, Xiaoqiang},
   date = {2015},
-  url = {https://www.tensorflow.org/},
-  keywords = {⛔ No DOI found}
+  url = {https://www.tensorflow.org/}
 }
 
 @software{Head:2018:ScikitoptimizeScikitoptimizeV0,
@@ -13,7 +12,6 @@
   date = {2018-03},
   doi = {10.5281/zenodo.1207017; http://web.archive.org/web/20200812085913/https://zenodo.org/record/1207017},
   url = {https://doi.org/10.5281/zenodo.1207017},
-  keywords = {archived},
   organization = {{Zenodo}},
   version = {v0.5.2}
 }
@@ -66,7 +64,6 @@
   pages = {2825--2830},
   url = {http://jmlr.org/papers/v12/pedregosa11a.html},
   file = {/home/riccardo/.local/share/zotero/files/pedregosa_et_al_2011_scikit-learn.pdf},
-  keywords = {⛔ No DOI found},
   number = {85}
 }
 
